# case-implementation-dfxml

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  case_to_dfxml.py  code.yaml  dfxml_to_case.py  setup.cfg  setup.py
.github/workflows/: ci.yml  supply-chain.yml
case_cli_example/: __init__.py
case_dfxml/: case_to_dfxml.py  cli.py  dfxml_to_case.py  py.typed
tests/: .gitignore  Makefile  README.md  empty_json.py  single_file_0_dfxml.py  single_filesystem_single_file_0_dfxml.py  verify_single_file.py  verify_single_filesystem_single_file.py
tests/case_examples/: Makefile  example.mk
tests/case_implementation_plaso_examples/: .gitignore  Makefile
tests/cli/: .gitignore  Makefile  example_output.jsonld  example_output.rdf  example_output.ttl  example_output_debug.jsonld  example_output_debug.rdf  example_output_debug.ttl  single_file_0_dfxml.py  single_filesystem_single_file_0_dfxml.py  test_cli.py
tests/package/: Makefile  test_package.py
