[metadata]
#TODO
name = case_cli_example
version = attr: case_cli_example.__version__
#TODO
# author = Example Person
# author_email = person@example.org
#TODO
description = A mapping of Example Tool to CASE
license_files = 
    LICENSE
    THIRD_PARTY_LICENSES.md
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
#TODO
url = https://github.com/casework/CASE-Implementation-Example
classifiers =
    # TODO
    # Please select a Development Status in line with CASE community guidance:
    # https://caseontology.org/resources/github_policies.html#development-statuses
    # E.g.:
    # Development Status :: 3 - Alpha
    Enviroment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
install_requires =
    case_utils >= 0.16.0, < 0.17.0
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    #TODO
    case_cli_example = case_cli_example.cli:main

[options.extras_require]
testing =
    case_utils[testing]

[options.package_data]
#TODO
case_cli_example = py.typed

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E302
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
