[metadata]
#TODO
name = case_dfxml
version = attr: case_dfxml.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A mapping between DFXML and CASE
license_files = 
    LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
#TODO
url = https://github.com/ajnelson-nist/case-implementation-dfxml
classifiers =
    Development Status :: 3 - Alpha
    Enviroment :: Console
    License :: Public Domain 
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

# See Git submodule in this project for current tested version of DFXML repository.
[options]
install_requires =
    case_utils >= 0.16.0, < 0.17.0
    dfxml @ git+https://git@github.com/dfxml-working-group/dfxml_python.git
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    case_to_dfxml = case_dfxml.case_to_dfxml:main
    dfxml_to_case = case_dfxml.dfxml_to_case:main

[options.extras_require]
testing =
    case_utils[testing]

[options.package_data]
case_dfxml = py.typed

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E302
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
